# 3D_interactive_graphics_rendering_engine

./: .gitignore  CMakeLists.txt  README.md
header/: shader_utility_class.h
includes/: How_To_Include_Dependencies.md
src/: glad.c  hello_triangle_exercise2.cpp  hello_triangle_exercise3.cpp  hello_triangle_indexed.cpp  hello_window.cpp  shaders_more_attributes.cpp  shaders_uniforms.cpp
src/getting_started_chapter/src/: hello_triangle_exercise1.cpp  shaders_more_attributes_source_using_shader_class.cpp  shaders_uniforms.cpp
